more dorothy parker

--- a/poetry.html
+++ b/poetry.html
@@ -25,9 +25,10 @@
 		</ul>
 	</nav>
 
-	<p> Here is a selection of my favorite poems. Thanks to <a href="https://www.poetryfoundation.org/">Poetry
-			Foundation</a>, <a href="https://www.loc.gov/">The Library of Congress</a>, and <a
-			href="https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to
+	<p> Here is a selection of my favorite poems. Thanks to <a href="https://www.loc.gov/">The Library of Congress</a>,
+		<a href="https://www.poetryfoundation.org/">Poetry
+			Foundation</a>, and <a href="https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for
+		securing permission to
 		reprint the works still under copyright.</p>
 
 	<blockquote>
@@ -219,53 +220,76 @@
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href = "poetry/i-know-i-have-been-happiest.html" style="color: #8F5E99">I Know I Have Been Happiest</a></td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-						<tr>
-				<td><a href = "poetry/i-shall-come-back.html" style="color: #8F5E99">I Shall Come Back</a></td>
+				<td><a href="poetry/godspeed.html" style="color: #8F5E99">Godspeed</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href = "poetry/purposely-ungrammatical-love-song.html" style="color: #8F5E99">Purposely Ungrammatical Love Song</a></td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-						<tr>
-				<td><a href = "poetry/recurrence.html" style="color: #8F5E99">Recurrence</a></td>
+				<td><a href="poetry/i-know-i-have-been-happiest.html" style="color: #8F5E99">I Know I Have Been
+						Happiest</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href = "poetry/somebodys-song.html" style="color: #8F5E99">Somebody's Song</a></td>
+				<td><a href="poetry/i-shall-come-back.html" style="color: #8F5E99">I Shall Come Back</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 						<tr>
-				<td><a href = "poetry/story-of-mrs-w.html" style="color: #8F5E99">Story of Mrs. W</a></td>
+				<td><a href="poetry/indian-summer.html" style="color: #8F5E99">Indian Summer</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Time</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/purposely-ungrammatical-love-song.html" style="color: #8F5E99">Purposely
+						Ungrammatical Love Song</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
-						<tr>
-				<td><a href = "poetry/the-ladys-reward.html" style="color: #8F5E99">The Lady's Reward</a></td>
+			<tr>
+				<td><a href="poetry/recurrence.html" style="color: #8F5E99">Recurrence</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/somebodys-song.html" style="color: #8F5E99">Somebody's Song</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/story-of-mrs-w.html" style="color: #8F5E99">Story of Mrs. W</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/the-ladys-reward.html" style="color: #8F5E99">The Lady's Reward</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/veteran.html" style="color: #8F5E99">Veteran</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Time</td>
 			</tr>
 			<tr>
 				<td>On Being a Woman</td>
@@ -288,13 +312,7 @@
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
-			<tr>
-				<td>Indian Summer</td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Time</td>
-			</tr>
+
 			<tr>
 				<td>Autumn Valentine</td>
 				<td>Dorothy Parker</td>
@@ -338,9 +356,7 @@
 		recommend donating to the <a href="https://www.eff.org/">Electronic Frontier Foundation.</a> Or, you can enjoy
 		the satirical poem <a
 			href="file:///Users/violetsinn/Downloads/SUM11-1166_Poem_The_Law_of_Copyright_2011-06-07_EN.pdf"><i>The Law
-				of Copyright</i></a> by Wendy Cope, distributed by The International Confederation of Societies of
-		Authors
-		and Composers (CISAC) for free.</p>
+				of Copyright</i></a> by Wendy Cope for free.</p>
 	<footer>
 		<p><small>© Violet Sinnarkar 2025 </small></p>
 	</footer>
