--- a/poetry/epitaph-to-a-dog.html
+++ b/poetry/epitaph-to-a-dog.html
@@ -63,7 +63,7 @@
         <p class = "image-caption">Coco with his brother Spot, undated.</p>
         <br>
         <p><img class="poem_vert_image" src="../photos/cocoa/cocoa-berkeley.jpeg"/></p>
-        <p class = "image-caption">Coco in May 2016, when I was accepted to Berkeley.</p>
+        <p class = "image-caption">Coco & I in the backyard in May 2016.</p>
         <br>
         <img class="poem_hori_image" src="../photos/cocoa/cocoa-thanksgiving.JPG"/></p>
         <p class = "image-caption">Coco on Thanksgiving 2017.</p>
