--- a/poetry.html
+++ b/poetry.html
@@ -142,7 +142,7 @@
 				<td>Life</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/on-love.html" style="color: #8F5E99">On Marriage</a></td>
+				<td><a href="poetry/on-love.html" style="color: #8F5E99">On Love</a></td>
 				<td>Khalil Gibran</td>
 				<td>Lebanese-American</td>
 				<td>Modernist</td>
