--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
 			<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
 			<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
-			<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
+			<li><a href="prose.html" style="color: #8F5E99">Prose</a></li>
 		</ul>
 	</nav>
 
@@ -51,21 +51,21 @@
 
 		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
 			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="linkedin.svg">
+				<object height=25px width=25px type="image/svg+xml" data="icons/linkedin.svg">
 				</object>
 			</div>
 		</a>
 
 		<a href="https://github.com/violetsinn" target="_blank">
 			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="github.svg">
+				<object height=25px width=25px type="image/svg+xml" data="icons/github.svg">
 				</object>
 			</div>
 		</a>
 
 		<a href="https://www.goodreads.com/user/show/7741912-violet" target="_blank">
 			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="goodreads.png">
+				<object height=25px width=25px type="image/svg+xml" data="icons/goodreads.png">
 				</object>
 			</div>
 		</a>
@@ -73,7 +73,7 @@
 
 		<a href="https://www.strava.com/athletes/71718313" target="_blank">
 			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="strava.svg">
+				<object height=25px width=25px type="image/svg+xml" data="icons/strava.svg">
 				</object>
 			</div>
 		</a>
