fix goodreads logo

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 		<a href="https://www.goodreads.com/user/show/7741912-violet" target="_blank">
 			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="icons/goodreads.png">
+				<object height=25px width=25px type="image/svg+xml" data="icons/goodreads-2.png">
 				</object>
 			</div>
 		</a>
