adding more to the table

--- a/poetry.html
+++ b/poetry.html
@@ -20,16 +20,18 @@
 		<ul>
 			<li><a href="index.html" style="color: #8F5E99">Home</a></li>
 			<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-			<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
-			<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
+			<li><a href="poetry.html" style="color: #8F5E99"><b>Poetry</b></a></li>
+			<li><a href="prose.html" style="color: #8F5E99">Prose</a></li>
 		</ul>
 	</nav>
 
 	<p> Here is a selection of my favorite poems. Thanks to <a href="https://www.loc.gov/">The Library of Congress</a>,
 		<a href="https://www.poetryfoundation.org/">Poetry
-			Foundation</a>, and <a href="https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for
+			Foundation</a>, <a href="https://poets.org/">Academy of American Poets</a> and <a
+			href="https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for
 		securing permission to
-		reprint the works still under copyright.</p>
+		reprint the works still under copyright.
+	</p>
 
 	<blockquote>
 		Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a
@@ -44,7 +46,6 @@
 				<th>Author</th>
 				<th>Nationality</th>
 				<th>Era</th>
-				<th>Theme</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -53,7 +54,6 @@
 				<td>W.H. Auden</td>
 				<td>English</td>
 				<td>Modernist</td>
-				<td>Death</td>
 			</tr>
 			<tr>
 				<td><a href="https://www.poetryfoundation.org/poems/161869/the-more-loving-one-65a7f822258fd">The More
@@ -61,134 +61,182 @@
 				<td>W.H. Auden</td>
 				<td>English</td>
 				<td>Modernist</td>
-				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href="https://www.poetryfoundation.org/poems/151653/you-fit-into-me">[you fit into me]</a></td>
-				<td>Margaret Atwood</td>
-				<td>Canadian</td>
+				<td><a href="https://www.poetryfoundation.org/poems/151844/the-thing-is">The Thing Is</a></td>
+				<td>Ellen Bass</td>
+				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-			<tr>
-				<td><a href="poetry/change-on-change.html" style="color: #8F5E99">Change on Change</a></td>
-				<td>Elizabeth Barrett Browning</td>
-				<td>English</td>
-				<td>Victorian</td>
-				<td>Nature</td>
-			</tr>
-			<tr>
-				<td><a href="poetry/how-do-i-love-thee.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
-				<td>Elizabeth Barrett Browning</td>
-				<td>English</td>
-				<td>Victorian</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/epitaph-to-a-dog.html" style="color: #8F5E99">Epitaph to a Dog</a></td>
 				<td>Lord Byron</td>
 				<td>English</td>
 				<td>Romantic</td>
-				<td>Love</td>
-			</tr>
-			<tr>
-				<td><a href="https://catdir.loc.gov/catdir/samples/random042/00061790.html">Women Don't Riot</a></td>
-				<td>Ana Castillo</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Freedom</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/late-fragment.html" style="color: #8F5E99">Late Fragment</a></td>
 				<td>Raymond Carver</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Life</td>
 			</tr>
 			<tr>
-				<td><a href="https://www.poetryfoundation.org/poetrymagazine/browse?volume=187&issue=5&page=24">Differences
-						of Opinion</a></td>
-				<td>Wendy Cope</td>
+				<td>On Turning Ten</td>
+				<td>Billy Collins</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="https://www.poetryfoundation.org/poetrymagazine/browse?volume=162&issue=5&page=28">Osso
+						Buco</a></td>
+				<td>Billy Collins</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/life.html">Life</a></td>
+				<td>Abraham Cowley</td>
+				<td>English</td>
+				<td>Metaphysical</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/you-are-tired.html">You Are Tired, (I think) </a></td>
+				<td>E.E. Cummings</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/television.html" style="color: #8F5E99">Television</a></td>
+				<td>Roald Dahl</td>
 				<td>English</td>
 				<td>Contemporary</td>
-				<td>Relationships</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/death-be-not-proud.html" style="color: #8F5E99">Death, be not proud</a></td>
 				<td>John Donne</td>
 				<td>English</td>
 				<td>Metaphysical</td>
-				<td>Death</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/no-man-is-an-island.html" style="color: #8F5E99"></a>No Man is an Island</td>
 				<td>John Donne</td>
 				<td>English</td>
 				<td>Metaphysical</td>
-				<td>Life</td>
-			</tr>
-			<tr>
-				<td><a href="poetry/the-sun-rising.html" style="color: #8F5E99">The Sun Rising</a></td>
-				<td>John Donne</td>
-				<td>English</td>
-				<td>Metaphysical</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/desiderata.html" style="color: #8F5E99">Desiderata</a></td>
 				<td>Max Ehrmann</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Life</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/fire-and-ice.html" style="color: #8F5E99">Fire and Ice</a></td>
+				<td>Robert Frost</td>
+				<td>American</td>
+				<td>Modernist</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/on-love.html" style="color: #8F5E99">On Love</a></td>
 				<td>Khalil Gibran</td>
 				<td>Lebanese-American</td>
 				<td>Modernist</td>
-				<td>Relationships</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/on-marriage.html" style="color: #8F5E99">On Marriage</a></td>
 				<td>Khalil Gibran</td>
 				<td>Lebanese-American</td>
 				<td>Modernist</td>
-				<td>Relationships</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/on-pleasure.html" style="color: #8F5E99">On Pleasure</a></td>
 				<td>Khalil Gibran</td>
 				<td>Lebanese-American</td>
 				<td>Modernist</td>
-				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="https://poets.org/poem/scaffolding">Scaffolding</a></td>
+				<td>Seamus Heaney</td>
+				<td>Irish</td>
+				<td>Contemporary</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/invictus.html">Invictus</a></td>
+				<td>William Ernest Henley</td>
+				<td>English</td>
+				<td>Victorian</td>
+			</tr>
+			<tr>
+				<td><a href="https://poets.org/poem/blur">Blur</a></td>
+				<td>Andrew Hudgins</td>
+				<td>American</td>
+				<td>Contemporary</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/young-and-old.html" style="color: #8F5E99">Young and Old</a></td>
+				<td>Charles Kingsley</td>
+				<td>British</td>
+				<td>Victorian</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/young-and-old.html" style="color: #8F5E99">If</a></td>
+				<td>Rudyard Kipling</td>
+				<td>British</td>
+				<td>Victorian</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/the-new-colossus.html" style="color: #8F5E99">The New Colossus</a></td>
 				<td>Emma Lazarus</td>
 				<td>American</td>
 				<td>Romantic</td>
-				<td>Freedom</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/the-fire-of-driftwood.html" style="color: #8F5E99">The Fire of Driftwood</a></td>
+				<td>Henry Wadsworth Longfellow</td>
+				<td>American</td>
+				<td>Romantic</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/the-ladder-of-st-augustine.html" style="color: #8F5E99">The Ladder of Saint
+						Augustine</a></td>
+				<td>Henry Wadsworth Longfellow</td>
+				<td>American</td>
+				<td>Romantic</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/the-lesson-of-the-moth.html" style="color: #8F5E99">The Lesson of the Moth</a></td>
+				<td>Don Marquis</td>
+				<td>American</td>
+				<td>Modernist</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/to-his-coy-mistress.html" style="color: #8F5E99">To His Coy Mistress</a></td>
 				<td>Andrew Marvell</td>
 				<td>British</td>
 				<td>Metaphysical</td>
-				<td>Love</td>
 			</tr>
 			<tr>
-				<td>Mirror, Mirror</td>
-				<td>Spike Mulligan</td>
-				<td>British</td>
-				<td>Contemporary</td>
-				<td>Beauty</td>
+				<td><a href="poetry/childhood-is-the-kingdom.html" style="color: #8F5E99">Childhood is the Kingdom</a></td>
+				<td>Edna St. Vincent Millay</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/lament.html" style="color: #8F5E99">Lament</a></td>
+				<td>Edna St. Vincent Millay</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/love-is-not-all.html" style="color: #8F5E99">Love is Not All</a></td>
+				<td>Edna St. Vincent Millay</td>
+				<td>American</td>
+				<td>Modernist</td>
 			</tr>
 			<tr>
 				<td>Don't Go Far Off</td>
 				<td>Pablo Neruda</td>
 				<td>Chilean</td>
 				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="https://www.poetryfoundation.org/poems/49236/one-hundred-love-sonnets-xvii">Soneto XVII</a>
@@ -196,35 +244,31 @@
 				<td>Pablo Neruda</td>
 				<td>Chilean</td>
 				<td>Contemporary</td>
-				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Tonight I Can Write The Saddest Lines
+				</td>
+				<td>Pablo Neruda</td>
+				<td>Chilean</td>
+				<td>Contemporary</td>
 			</tr>
 			<tr>
 				<td>Next Time</td>
 				<td>Mary Oliver</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-			<tr>
-				<td>The Uses of Sorrow</td>
-				<td>Mary Oliver</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td>Wild Geese</td>
 				<td>Mary Oliver</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/godspeed.html" style="color: #8F5E99">Godspeed</a></td>
-				<td>Dorothy Parker</td>
+				<td><a href="poetry/her.html" style="color: #8F5E99">Her</a></td>
+				<td>Ashwinee Panda</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/i-know-i-have-been-happiest.html" style="color: #8F5E99">I Know I Have Been
@@ -232,21 +276,6 @@
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-			<tr>
-				<td><a href="poetry/i-shall-come-back.html" style="color: #8F5E99">I Shall Come Back</a></td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-						<tr>
-				<td><a href="poetry/indian-summer.html" style="color: #8F5E99">Indian Summer</a></td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Time</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/purposely-ungrammatical-love-song.html" style="color: #8F5E99">Purposely
@@ -254,109 +283,87 @@
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/recurrence.html" style="color: #8F5E99">Recurrence</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-			<tr>
-				<td><a href="poetry/somebodys-song.html" style="color: #8F5E99">Somebody's Song</a></td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/story-of-mrs-w.html" style="color: #8F5E99">Story of Mrs. W</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/the-ladys-reward.html" style="color: #8F5E99">The Lady's Reward</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/veteran.html" style="color: #8F5E99">Veteran</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Time</td>
 			</tr>
 			<tr>
-				<td>On Being a Woman</td>
+				<td><a href="poetry/on-being-a-woman.html" style="color: #8F5E99">On Being a Woman</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Love</td>
 			</tr>
 			<tr>
-				<td>Midnight</td>
+				<td><a href="poetry/autumn-valentine.html" style="color: #8F5E99">Autumn Valentine</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
-				<td>Time</td>
 			</tr>
 			<tr>
-				<td>Lullaby</td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Love</td>
-			</tr>
-
-			<tr>
-				<td>Autumn Valentine</td>
-				<td>Dorothy Parker</td>
-				<td>American</td>
-				<td>Contemporary</td>
-				<td>Love</td>
+				<td><a href="poetry/initiation.html" style="color: #8F5E99">Eingang (Initiation)</a></td>
+				<td>Rainer Maria Rilke</td>
+				<td>Austrian</td>
+				<td>Modernist</td>
 			</tr>
 			<tr>
-				<td>Hymn to the Penates</td>
+				<td><a href="poetry/hymn-to-the-penates.html" style="color: #8F5E99">Hymn to the Penates</a>
+				</td>
 				<td>Robert Southey</td>
 				<td>British</td>
 				<td>Romantic</td>
-				<td>Home</td>
 			</tr>
 			<tr>
-				<td>Ozymandius</td>
+				<td><a href="poetry/ozymandius.html" style="color: #8F5E99">Ozymandius</a></td>
 				<td>Percy Bysshe Shelley</td>
 				<td>British</td>
 				<td>Romantic</td>
-				<td>Time</td>
 			</tr>
 			<tr>
-				<td>Suicide in the Trenches</td>
+				<td><a href="poetry/suicide-in-the-trenches.html" style="color: #8F5E99">Suicide in the Trenches</a>
+				</td>
 				<td>Siegfried Sassoon</td>
 				<td>British</td>
 				<td>Modernist</td>
-				<td>Life</td>
 			</tr>
 			<tr>
-				<td>When You Are Old</td>
+				<td><a href="https://www.poetryfoundation.org/poems/46569/do-not-go-gentle-into-that-good-night" style="color: #8F5E99">Do Not Go Gentle into That Good Night</a>
+				</td>
+				<td>Dylan Thomas</td>
+				<td>Welsh</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/when-you-are-old.html" style="color: #8F5E99">When You Are Old</a></td>
 				<td>William Butler Yeats</td>
 				<td>Irish</td>
 				<td>Modernist</td>
-				<td>Time</td>
 			</tr>
 		</tbody>
 	</table>
 	<br>
 	<p> Most of Auden's work will enter the public domain in 2044. Raymond Carver's <i>A New Path to the Waterfall</i>
-		will enter in 2059. If you would like to improve copyright law and policy in the United States, I would
-		recommend donating to the <a href="https://www.eff.org/">Electronic Frontier Foundation.</a> Or, you can enjoy
-		the satirical poem <a
-			href="file:///Users/violetsinn/Downloads/SUM11-1166_Poem_The_Law_of_Copyright_2011-06-07_EN.pdf"><i>The Law
-				of Copyright</i></a> by Wendy Cope for free.</p>
+		will enter in 2059.</p>
 	<footer>
 		<p><small>© Violet Sinnarkar 2025 </small></p>
 	</footer>
