--- a/poetry.html
+++ b/poetry.html
@@ -136,6 +136,12 @@
 				<td>Modernist</td>
 			</tr>
 			<tr>
+				<td><a href="poetry/stopping-by-the-woods.html" style="color: #8F5E99">Stopping By The Woods</a></td>
+				<td>Robert Frost</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
 				<td><a href="poetry/on-love.html" style="color: #8F5E99">On Love</a></td>
 				<td>Khalil Gibran</td>
 				<td>Lebanese-American</td>
@@ -151,6 +157,12 @@
 				<td><a href="poetry/on-pleasure.html" style="color: #8F5E99">On Pleasure</a></td>
 				<td>Khalil Gibran</td>
 				<td>Lebanese-American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="https://www.poetryfoundation.org/poems/46461/those-winter-sundays">Those Winter Sundays</a></td>
+				<td>Robert Haydon</td>
+				<td>American</td>
 				<td>Modernist</td>
 			</tr>
 			<tr>
@@ -203,6 +215,12 @@
 				<td>Romantic</td>
 			</tr>
 			<tr>
+				<td><a href="poetry/no-enemies.html" style="color: #8F5E99">No Enemies</a></td>
+				<td>Charles Mackay</td>
+				<td>Scottish</td>
+				<td>Victorian</td>
+			</tr>
+			<tr>
 				<td><a href="poetry/the-lesson-of-the-moth.html" style="color: #8F5E99">The Lesson of the Moth</a></td>
 				<td>Don Marquis</td>
 				<td>American</td>
@@ -215,7 +233,19 @@
 				<td>Metaphysical</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/childhood-is-the-kingdom.html" style="color: #8F5E99">Childhood is the Kingdom</a></td>
+				<td><a href="poetry/ashes-of-life.html" style="color: #8F5E99">Ashes of Life</a></td>
+				<td>Edna St. Vincent Millay</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/childhood-is-the-kingdom.html" style="color: #8F5E99">Childhood is the Kingdom Where Nobody Dies</a></td>
+				<td>Edna St. Vincent Millay</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/i-think-i-should-have.html" style="color: #8F5E99">I Think I Should Have Loved You Presently</a></td>
 				<td>Edna St. Vincent Millay</td>
 				<td>American</td>
 				<td>Modernist</td>
@@ -228,6 +258,12 @@
 			</tr>
 			<tr>
 				<td><a href="poetry/love-is-not-all.html" style="color: #8F5E99">Love is Not All</a></td>
+				<td>Edna St. Vincent Millay</td>
+				<td>American</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/pity-me-not.html" style="color: #8F5E99">Pity Me Not</a></td>
 				<td>Edna St. Vincent Millay</td>
 				<td>American</td>
 				<td>Modernist</td>
@@ -265,8 +301,20 @@
 				<td>Contemporary</td>
 			</tr>
 			<tr>
+				<td><a href = "poetr/dulce-et-decorum-est.html">Dulce Et Decorum Est</a></td>
+				<td>Wilfred Owen</td>
+				<td>British</td>
+				<td>Modernist</td>
+			</tr>
+			<tr>
 				<td><a href="poetry/her.html" style="color: #8F5E99">Her</a></td>
 				<td>Ashwinee Panda</td>
+				<td>American</td>
+				<td>Contemporary</td>
+			</tr>
+				<tr>
+				<td><a href="poetry/but-not-forgotten.html" style="color: #8F5E99">But Not Forgotten</a></td>
+				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 			</tr>
@@ -325,6 +373,27 @@
 				<td>Rainer Maria Rilke</td>
 				<td>Austrian</td>
 				<td>Modernist</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/her-kind.html" style="color: #8F5E99">Her Kind</a>
+				</td>
+				<td>Anne Sexton</td>
+				<td>American</td>
+				<td>Confessional</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/starry-night.html" style="color: #8F5E99">Starry Night</a>
+				</td>
+				<td>Anne Sexton</td>
+				<td>American</td>
+				<td>Confessional</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/young.html" style="color: #8F5E99">Young</a>
+				</td>
+				<td>Anne Sexton</td>
+				<td>American</td>
+				<td>Confessional</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/hymn-to-the-penates.html" style="color: #8F5E99">Hymn to the Penates</a>
