--- a/poetry.html
+++ b/poetry.html
@@ -160,6 +160,12 @@
 				<td>Modernist</td>
 			</tr>
 			<tr>
+				<td><a href="poetry/ranjish-hi-sahi.html">Ranjish Hi Sahi</a></td>
+				<td>Ahmed Faraz</td>
+				<td>Pakistani/td>
+				<td>Contemporary</td>
+			</tr>
+			<tr>
 				<td><a href="https://www.poetryfoundation.org/poems/46461/those-winter-sundays">Those Winter Sundays</a></td>
 				<td>Robert Haydon</td>
 				<td>American</td>
