--- a/poetry.html
+++ b/poetry.html
@@ -118,7 +118,7 @@
 				<td>Metaphysical</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/no-man-is-an-island.html" style="color: #8F5E99"></a>No Man is an Island</td>
+				<td><a href="poetry/no-man-is-an-island.html" style="color: #8F5E99">No Man is an Island</a></td>
 				<td>John Donne</td>
 				<td>English</td>
 				<td>Metaphysical</td>
