--- a/poetry.html
+++ b/poetry.html
@@ -130,6 +130,12 @@
 				<td>Contemporary</td>
 			</tr>
 			<tr>
+				<td><a href="poetry/ranjish-hi-sahi.html" style="color: #8F5E99">Ranjish Hi Sahi</a></td>
+				<td>Ahmed Faraz</td>
+				<td>Pakistani/td>
+				<td>Contemporary</td>
+			</tr>
+			<tr>
 				<td><a href="poetry/fire-and-ice.html" style="color: #8F5E99">Fire and Ice</a></td>
 				<td>Robert Frost</td>
 				<td>American</td>
@@ -160,13 +166,8 @@
 				<td>Modernist</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/ranjish-hi-sahi.html">Ranjish Hi Sahi</a></td>
-				<td>Ahmed Faraz</td>
-				<td>Pakistani/td>
-				<td>Contemporary</td>
-			</tr>
-			<tr>
-				<td><a href="https://www.poetryfoundation.org/poems/46461/those-winter-sundays">Those Winter Sundays</a></td>
+				<td><a href="https://www.poetryfoundation.org/poems/46461/those-winter-sundays">Those Winter Sundays</a>
+				</td>
 				<td>Robert Haydon</td>
 				<td>American</td>
 				<td>Modernist</td>
@@ -245,13 +246,15 @@
 				<td>Modernist</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/childhood-is-the-kingdom.html" style="color: #8F5E99">Childhood is the Kingdom Where Nobody Dies</a></td>
+				<td><a href="poetry/childhood-is-the-kingdom.html" style="color: #8F5E99">Childhood is the Kingdom Where
+						Nobody Dies</a></td>
 				<td>Edna St. Vincent Millay</td>
 				<td>American</td>
 				<td>Modernist</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/i-think-i-should-have.html" style="color: #8F5E99">I Think I Should Have Loved You Presently</a></td>
+				<td><a href="poetry/i-think-i-should-have.html" style="color: #8F5E99">I Think I Should Have Loved You
+						Presently</a></td>
 				<td>Edna St. Vincent Millay</td>
 				<td>American</td>
 				<td>Modernist</td>
@@ -307,7 +310,7 @@
 				<td>Contemporary</td>
 			</tr>
 			<tr>
-				<td><a href = "poetr/dulce-et-decorum-est.html">Dulce Et Decorum Est</a></td>
+				<td><a href="poetr/dulce-et-decorum-est.html">Dulce Et Decorum Est</a></td>
 				<td>Wilfred Owen</td>
 				<td>British</td>
 				<td>Modernist</td>
@@ -318,7 +321,7 @@
 				<td>American</td>
 				<td>Contemporary</td>
 			</tr>
-				<tr>
+			<tr>
 				<td><a href="poetry/but-not-forgotten.html" style="color: #8F5E99">But Not Forgotten</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
@@ -422,7 +425,8 @@
 				<td>Modernist</td>
 			</tr>
 			<tr>
-				<td><a href="https://www.poetryfoundation.org/poems/46569/do-not-go-gentle-into-that-good-night" style="color: #8F5E99">Do Not Go Gentle into That Good Night</a>
+				<td><a href="https://www.poetryfoundation.org/poems/46569/do-not-go-gentle-into-that-good-night"
+						style="color: #8F5E99">Do Not Go Gentle into That Good Night</a>
 				</td>
 				<td>Dylan Thomas</td>
 				<td>Welsh</td>
