minor table fixes

--- a/poetry.html
+++ b/poetry.html
@@ -130,9 +130,9 @@
 				<td>Contemporary</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/ranjish-hi-sahi.html" style="color: #8F5E99">Ranjish Hi Sahi</a></td>
+				<td><a href="poetry/ranjish-hi-sahi.html" style="color: #8F5E99">Ranjish Hi Sahi (Even If In Resentment)</a></td>
 				<td>Ahmed Faraz</td>
-				<td>Pakistani/td>
+				<td>Pakistani</td>
 				<td>Contemporary</td>
 			</tr>
 			<tr>
