--- a/poetry.html
+++ b/poetry.html
@@ -106,7 +106,7 @@
 				<td>Modernist</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/television.html" style="color: #8F5E99">Television</a></td>
+				<td>Television</td>
 				<td>Roald Dahl</td>
 				<td>English</td>
 				<td>Contemporary</td>
@@ -310,7 +310,7 @@
 				<td>Contemporary</td>
 			</tr>
 			<tr>
-				<td><a href="poetr/dulce-et-decorum-est.html">Dulce Et Decorum Est</a></td>
+				<td><a href="poetry/dulce-et-decorum-est.html"  style="color: #8F5E99">Dulce Et Decorum Est</a></td>
 				<td>Wilfred Owen</td>
 				<td>British</td>
 				<td>Modernist</td>
@@ -442,7 +442,7 @@
 	</table>
 	<br>
 	<p> Most of Auden's work will enter the public domain in 2044. Raymond Carver's <i>A New Path to the Waterfall</i>
-		will enter in 2059.</p>
+		will enter in 2059. Roald Dahl's work will enter in 2061.</p>
 	<footer>
 		<p><small>© Violet Sinnarkar 2025 </small></p>
 	</footer>
