--- a/poetry/death-be-not-proud copy.html
+++ b/poetry/death-be-not-proud copy.html
@@ -25,8 +25,10 @@
         </ul>
     </nav>
 
-    <h2> Death, be not proud (Holy Sonnet X) </h2>
+    <h2> No Man is an island (Meditation XVII)</h2>
     <h3> By John Donne </h3>
+
+    <h3> Modern Version</h3>
     <p>
         Death, be not proud, though some have called thee</br>
         Mighty and dreadful, for thou are not so;<br>
@@ -45,6 +47,21 @@
         <br>
         One short sleep past, we wake eternally,<br>
         And death shall be no more; Death, thou shalt die.<br>
+    </p>
+
+    <h3> Original Version</h3>
+    <p>No man is an Iland, intire of itselfe;<br>
+        every man is a peece of the Continent, <br>
+        a part of the maine;<br>
+        if a Clod bee washed away by the Sea, <br>
+        Europe is the lesse, <br>
+        as well as if a Promontorie were, <br>
+        as well as if a Manor of thy friends <br>
+        or of thine owne were; <br>
+        any mans death diminishes me,<br>
+        because I am involved in Mankinde;<br>
+        And therefore never send to know for whom the bell tolls; <br>
+        It tolls for thee.
     </p>
 </body>
 
