--- a/prose.html
+++ b/prose.html
@@ -28,80 +28,78 @@
 		</ul>
 	</nav>
 
-	<p>Here are some of my all-time favorite books. </p>
+		<p>Here are some of my all-time favorite books. </p>
 
-	<h3>Fiction</h3>
+		<h3>Fiction</h3>
 
-	<b>Bildungsroman</p>
-	<p>A Tree Grows in Brooklyn by Betty Smith</p>
-	<p>A Little Life by Hanya Yanagihara</p>
-	
-	<b>Children's Literature</b>
-	<p>A Little Princess by Frances Hodgson Burnett</p>
-	<p>The Chronicles of Narnia by C.S. Lewis</p>
+		<b>Bildungsroman</b>
+		<p>A Tree Grows in Brooklyn by Betty Smith</p>
+		<p>A Little Life by Hanya Yanagihara</p>
 
-	<b>Classics/b>
-	<p>Crime and Punishment by Fyodor Dostoevsky</p>
+		<b>Children's Literature</b>
+		<p>A Little Princess by Frances Hodgson Burnett</p>
+		<p>The Chronicles of Narnia by C.S. Lewis</p>
 
-	<b>Dsytopian</b>
-	<p>The Handmaid's Tale by Margaret Atwood</p>
-	<p>Brave New World by Aldous Huxley</p>
+		<b>Classics</b>
+		<p>Crime and Punishment by Fyodor Dostoevsky</p>
 
-	<b>Historial Fiction</b>
-	<p>The Great Gatsy by F. Scott Fitzgerald</p>
-	<p>Lessons in Chemistry by Bonnie Garmus<p>
-	<p>The Kite Runner by Khaled Hosseini</p>
-	<p>Lyddie by Katherine Paterson</p>
-	<p>The Book Thief by Markus Zusak</p>
+		<b>Dsytopian</b>
+		<p>The Handmaid's Tale by Margaret Atwood</p>
+		<p>Brave New World by Aldous Huxley</p>
 
-	<b>Magical Realism</b>
-	<p>The Time Traveler's Wife by Audrey Niffenegger</p>
-	<p>Elsewhere by Gabrielle Zevin<p>
+		<b>Historial Fiction</b>
+		<p>The Great Gatsy by F. Scott Fitzgerald</p>
+		<p>Lessons in Chemistry by Bonnie Garmus</p>
+		<p>The Kite Runner by Khaled Hosseini</p>
+		<p>Lyddie by Katherine Paterson</p>
+		<p>The Book Thief by Markus Zusak</p>
 
-	<b>Mystery</b>
-	<p>Gone Girl by Gillian Flynn</p>
+		<b>Magical Realism</b>
+		<p>The Time Traveler's Wife by Audrey Niffenegger</p>
+		<p>Elsewhere by Gabrielle Zevin</p>
 
-	<b>Realistic Fiction</b>
-	<p>The Bluest Eye by Toni Morrison</p>
-	<p>The Joy Luck Club by Amy Tan<p>
+		<b>Mystery</b>
+		<p>Gone Girl by Gillian Flynn</p>
 
-	<b>Science Fiction</b>
-	<p>Dune by Frank Herbert</p>
+		<b>Realistic Fiction</b>
+		<p>The Bluest Eye by Toni Morrison</p>
+		<p>The Joy Luck Club by Amy Tan</p>
 
-	<b>Short Stories</b>
-	<p>Flowers for Algernon by Daniel Keyes</p>
-	<p>A Sound of Thunder by Ray Bradbury
-	<p>How I Taught My Grandmother to Read by Sudha Murthy</p>
-	
-	
+		<b>Science Fiction</b>
+		<p>Dune by Frank Herbert</p>
 
-	<h3>Non-Fiction</h3>
+		<b>Short Stories</b>
+		<p>Flowers for Algernon by Daniel Keyes</p>
+		<p>A Sound of Thunder by Ray Bradbury
+		<p>How I Taught My Grandmother to Read by Sudha Murthy</p>
+		<br>
+		<h3>Non-Fiction</h3>
 
-	<b>Essays</b>
-	<p>Consider the Lobster by David Foster Wallace</p>
+		<b>Essays</b>
+		<p>Consider the Lobster by David Foster Wallace</p>
 
-	<b>Memoirs</b>
-	<p>Escape from Camp 14 by Blaine Harden</p>
-	<p>Beneath the Surface by John Hargrove</p>
+		<b>Memoirs</b>
+		<p>Escape from Camp 14 by Blaine Harden</p>
+		<p>Beneath the Surface by John Hargrove</p>
 
-	<b>Psychology<b>
-	<p>Attachment Disturbances in Adults by Daniel P. Brown</p>
-	<p>Man and His Symbols by Carl Jung</p>
-	<p>Nonviolent Communication by Marshall Rosenberg</p>
+		<b>Psychology</b>
+		<p>Attachment Disturbances in Adults by Daniel P. Brown</p>
+		<p>Man and His Symbols by Carl Jung</p>
+		<p>Nonviolent Communication by Marshall Rosenberg</p>
 
-	<b>Sociology</b>
-	<p>Guest House for Young Widows: Among the Women of ISIS by Azadeh Moaveni</p>
-	<p>Far From The Tree: Parents, Children and the Search for Identity by Andrew Solomon</p>
-	
-	<b>True Crime<b>
-	<p>Columbine by Dave Cullen</p>
-	<p>I'll Be Gone in the Dark by Michelle McNamara</p>
+		<b>Sociology</b>
+		<p>Guest House for Young Widows: Among the Women of ISIS by Azadeh Moaveni</p>
+		<p>Far From The Tree: Parents, Children and the Search for Identity by Andrew Solomon</p>
+
+		<b>True Crime</b>
+		<p>Columbine by Dave Cullen</p>
+		<p>I'll Be Gone in the Dark by Michelle McNamara</p>
 
 
-	<p><small>© 2025 Violet Sinnarkar </small></p>
+		<footer>
+			<p><small>© 2025 Violet Sinnarkar </small></p>
+		</footer>
 
-	</footer>
-
-</body>
+	</body>
 
 </html>
